Added base background

--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
     <link rel="stylesheet" href="/css/main.css" />
     <title>Landing Page</title>
   </head>
-  <body></body>
+  <body>
+    <nav class="nav">
+      <ul>
+        <li class="nav__item">Buttons</li>
+        <li class="nav__item">Navbar</li>
+        <li class="nav__item">Cards</li>
+        <li class="nav__item">Menus</li>
+        <li class="nav__item">Forms</li>
+      </ul>
+    </nav>
+  </body>
 </html>
