Added main content area layout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav class="nav">
-      <ul>
+      <ul class="nav__list">
         <li class="nav__item">Buttons</li>
         <li class="nav__item">Navbar</li>
         <li class="nav__item">Cards</li>
