Added button components to main landing page

--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
     <title>Landing Page</title>
   </head>
   <body>
-    <nav class="nav">
-      <ul class="nav__list">
-        <li class="nav__item">Buttons</li>
-        <li class="nav__item">Navbar</li>
-        <li class="nav__item">Cards</li>
-        <li class="nav__item">Menus</li>
-        <li class="nav__item">Forms</li>
-      </ul>
-    </nav>
+    <div class="components">
+      <a href="#" class="components__item">Buttons</a>
+      <a href="#" class="components__item">Navbars</a>
+      <a href="#" class="components__item">Cards</a>
+      <a href="#" class="components__item">Menus</a>
+      <a href="#" class="components__item">Forms</a>
   </body>
 </html>
