Added a title and positioned components to the main landing page

--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
     <title>Landing Page</title>
   </head>
   <body>
-    <div class="components">
-      <a href="#" class="components__item">Buttons</a>
-      <a href="#" class="components__item">Navbars</a>
-      <a href="#" class="components__item">Cards</a>
-      <a href="#" class="components__item">Menus</a>
-      <a href="#" class="components__item">Forms</a>
-  </body>
+    <main class="main">
+        <h1 class="title">Select a component</h1>
+      <div class="components">
+        <a href="#" class="components__item">Buttons</a>
+        <a href="#" class="components__item">Navbars</a>
+        <a href="#" class="components__item">Cards</a>
+        <a href="#" class="components__item">Menus</a>
+        <a href="#" class="components__item">Forms</a>
+      </div>
+    </main>
 </html>
