Added pages to component links

--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <link rel="stylesheet" href="/css/main.css" />
     <title>Landing Page</title>
   </head>
-  <body>
-    <main class="main">
-        <h1 class="title">Select a component</h1>
-      <div class="components">
-        <a href="#" class="components__item">Buttons</a>
-        <a href="#" class="components__item">Navbars</a>
-        <a href="#" class="components__item">Cards</a>
-        <a href="#" class="components__item">Menus</a>
-        <a href="#" class="components__item">Forms</a>
-      </div>
-    </main>
+    <body>
+      <main class="main">
+          <h1 class="title">Select a component</h1>
+        <div class="components">
+          <a href="buttons.html" class="components__item">Buttons</a>
+          <a href="navbars.html" class="components__item">Navbars</a>
+          <a href="cards.html" class="components__item">Cards</a>
+          <a href="menus.html" class="components__item">Menus</a>
+          <a href="forms.html" class="components__item">Forms</a>
+        </div>
+      </main>
+    </body>
+  </head>
 </html>
