--- a/buttons.html
+++ b/buttons.html
@@ -16,11 +16,11 @@
         <a href="/index.html" class="title__link">&larr; Go Home</a>
       </h3>
       <div class="buttons">
-        <div class="btn btn--1">btn-1</div>
-        <div class="btn btn--2">btn-2</div>
-        <div class="btn btn--3">btn-3</div>
-        <div class="btn btn--4">btn-4</div>
-        <div class="btn btn--5">btn-5</div>
+        <div class="btn btn__1">btn-1</div>
+        <div class="btn btn__2">btn-2</div>
+        <div class="btn btn__3">btn-3</div>
+        <div class="btn btn__4">btn-4</div>
+        <div class="btn btn__5">btn-5</div>
       </div>
     </main>
   </body>
