--- a/navbars.html
+++ b/navbars.html
@@ -15,12 +15,18 @@
       <h3 class="title go-home">
         <a href="/index.html" class="title__link">&larr; Go Home</a>
       </h3>
-      <div class="buttons">
-        <div class="btn btn__1">btn-1</div>
-        <div class="btn btn__2">btn-2</div>
-        <div class="btn btn__3">btn-3</div>
-        <div class="btn btn__4">btn-4</div>
-        <div class="btn btn__5">btn-5</div>
+      <div class="navbars">
+        <ul class="nav nav__1">
+          <li class="nav__1--logo">Logo</li>
+          <li class="nav__1--home">Home</li>
+          <li class="nav__1--about">About</li>
+          <li class="nav__1--team">Team</li>
+          <li class="nav__1--contact">Contact</li>
+        </ul>
+        <!-- <div class="nav nav__2">nav-2</div>
+        <div class="nav nav__3">nav-3</div>
+        <div class="nav nav__4">nav-4</div>
+        <div class="nav nav__5">nav-5</div> -->
       </div>
     </main>
   </body>
