Created navbar-1 and added animation hiver effects on menu items

--- a/navbars.html
+++ b/navbars.html
@@ -18,10 +18,13 @@
       <div class="navbars">
         <ul class="nav nav__1">
           <li class="nav__1--logo">Logo</li>
-          <li class="nav__1--home">Home</li>
-          <li class="nav__1--about">About</li>
-          <li class="nav__1--team">Team</li>
-          <li class="nav__1--contact">Contact</li>
+          <li class="nav__1--items">
+            <li class="nav__1--item">Home</li>
+            <li class="nav__1--item">About</li>
+            <li class="nav__1--item">Team</li>
+            <li class="nav__1--item">Contact</li>
+          </li>
+          
         </ul>
         <!-- <div class="nav nav__2">nav-2</div>
         <div class="nav nav__3">nav-3</div>
