--- a/navbars.html
+++ b/navbars.html
@@ -24,12 +24,17 @@
             <li class="nav__1--item">Team</li>
             <li class="nav__1--item">Contact</li>
           </li>
-          
         </ul>
-        <!-- <div class="nav nav__2">nav-2</div>
+        <div class="nav nav__2">
+          <li class="nav__2--item">Logo</li>
+          <li class="nav__2--item">Home</li>
+          <li class="nav__2--item">About</li>
+          <li class="nav__2--item">Team</li>
+          <li class="nav__2--item">Contact</li>
+        </div>
         <div class="nav nav__3">nav-3</div>
         <div class="nav nav__4">nav-4</div>
-        <div class="nav nav__5">nav-5</div> -->
+        <div class="nav nav__5">nav-5</div>
       </div>
     </main>
   </body>
