Added basic animation to menu items

--- a/navbars.html
+++ b/navbars.html
@@ -26,7 +26,7 @@
           </li>
         </ul>
         <div class="nav nav__2">
-          <li class="nav__2--item">Logo</li>
+          <li class="nav__2--item nav__2--logo">Logo</li>
           <li class="nav__2--item">Home</li>
           <li class="nav__2--item">About</li>
           <li class="nav__2--item">Team</li>
