--- a/navbars.html
+++ b/navbars.html
@@ -25,14 +25,20 @@
             <li class="nav__1--item">Contact</li>
           </li>
         </ul>
-        <div class="nav nav__2">
+        <ul class="nav nav__2">
           <li class="nav__2--item nav__2--logo">Logo</li>
           <li class="nav__2--item">Home</li>
           <li class="nav__2--item">About</li>
           <li class="nav__2--item">Team</li>
           <li class="nav__2--item">Contact</li>
-        </div>
-        <div class="nav nav__3">nav-3</div>
+        </ul>
+        <ul class="nav nav__3">
+            <li class="nav__3--item nav__3--logo">Logo</li>
+            <li class="nav__3--item">Home</li>
+            <li class="nav__3--item">About</li>
+            <li class="nav__3--item">Team</li>
+            <li class="nav__3--item">Contact</li>
+        </ul>
         <div class="nav nav__4">nav-4</div>
         <div class="nav nav__5">nav-5</div>
       </div>
