--- a/navbars.html
+++ b/navbars.html
@@ -33,7 +33,7 @@
           <li class="nav__2--item">Contact</li>
         </ul>
         <ul class="nav nav__3">
-            <li class="nav__3--item nav__3--logo">Logo</li>
+            <li class="nav__3--logo">Logo</li>
             <li class="nav__3--item">Home</li>
             <li class="nav__3--item">About</li>
             <li class="nav__3--item">Team</li>
