Added menu items to navbar-4

--- a/navbars.html
+++ b/navbars.html
@@ -39,7 +39,13 @@
             <li class="nav__3--item">Team</li>
             <li class="nav__3--item">Contact</li>
         </ul>
-        <div class="nav nav__4">nav-4</div>
+        <nav class="nav nav__4">
+          <li class="nav__4--item">Home</li>
+          <li class="nav__4--item">About</li>
+          <li class="nav__4--logo">Logo</li>
+            <li class="nav__4--item">Team</li>
+            <li class="nav__4--item">Contact</li>
+        </nav>
         <div class="nav nav__5">nav-5</div>
       </div>
     </main>
