--- a/navbars.html
+++ b/navbars.html
@@ -46,7 +46,13 @@
             <li class="nav__4--item">Team</li>
             <li class="nav__4--item">Contact</li>
         </nav>
-        <div class="nav nav__5">nav-5</div>
+        <div class="nav nav__5">
+          <li class="nav__5--item">Home</li>
+          <li class="nav__5--item">About</li>
+          <li class="nav__5--logo">Logo</li>
+          <li class="nav__5--item">Team</li>
+          <li class="nav__5--item">Contact</li>
+        </div>
       </div>
     </main>
   </body>
