Added card section list items

--- a/cards.html
+++ b/cards.html
@@ -7,5 +7,21 @@
     <link rel="stylesheet" href="/css/main.css" />
     <title>Cards</title>
   </head>
-  <body></body>
+  <body>
+    <div class="main">
+      <h1 class="title">
+        <a href="#" class="title__link">Cards</a>
+      </h1>
+      <h3 class="title go-home">
+        <a href="/index.html" class="title__link">&larr; Go Home</a>
+      </h3>
+
+      <div class="cards">
+        <div class="cards--1">card1</div>
+        <div class="cards--2">card2</div>
+        <div class="cards--3">card3</div>
+        <div class="cards--4">card4</div>
+      </div>
+    </div>
+  </body>
 </html>
