--- a/cards.html
+++ b/cards.html
@@ -17,10 +17,14 @@
       </h3>
 
       <div class="cards">
-        <div class="cards--1">card1</div>
-        <div class="cards--2">card2</div>
-        <div class="cards--3">card3</div>
-        <div class="cards--4">card4</div>
+        <div class="card--1">
+          <h3 class="card--1__title">Card 1</h3>
+          <img src="" alt="" class="cards--1__img">
+        </h3>
+
+        <!-- <div class="card--2">card2</div>
+        <div class="card--3">card3</div>
+        <div class="card--4">card4</div> -->
       </div>
     </div>
   </body>
