--- a/cards.html
+++ b/cards.html
@@ -20,6 +20,8 @@
         <div class="card--1">
           <h3 class="card--1__title">Card 1</h3>
           <img src="" alt="" class="cards--1__img">
+          <p class="card--1__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+          <button class="card--1__btn">btn</button>
         </h3>
 
         <!-- <div class="card--2">card2</div>
