Added the basic styling to card-1

--- a/cards.html
+++ b/cards.html
@@ -19,9 +19,11 @@
       <div class="cards">
         <div class="card--1">
           <h3 class="card--1__title">Card 1</h3>
-          <img src="" alt="" class="cards--1__img">
+          <div class="card--1__img">
+            <!-- <img src="" alt="card-1 img"> -->
+          </div>
           <p class="card--1__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-          <button class="card--1__btn">btn</button>
+          <button class="card--1__btn">btn</button> 
         </h3>
 
         <!-- <div class="card--2">card2</div>
