Finalised card styling

--- a/cards.html
+++ b/cards.html
@@ -23,7 +23,7 @@
             <!-- <img src="" alt="card-1 img"> -->
           </div>
           <p class="card--1__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-          <button class="btn card--1__btn">btn</button> 
+          <button class="btn card--1__btn">button</button> 
         </h3>
 
         <!-- <div class="card--2">card2</div>
