--- a/cards.html
+++ b/cards.html
@@ -25,7 +25,12 @@
         </h3>
 
       </div>
-      <div class="card card--2">card2</div>
+      <div class="card card--2">
+        <h3 class="card--1__title">Card 1</h3>
+          <div class="card--1__img"></div>
+          <p class="card--1__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+          <button class="btn card--1__btn">button</button>
+      </div>
       <!-- <div class="card--3">card3</div>
       <div class="card--4">card4</div> -->
     </div>
