--- a/cards.html
+++ b/cards.html
@@ -25,11 +25,19 @@
         </h3>
 
       </div>
+
       <div class="card card--2">
         <h3 class="card--2__title">Card 2</h3>
           <div class="card--2__img"></div>
           <p class="card--2__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
           <button class="btn card--2__btn">button</button>
+      </div>
+
+      <div class="card card--3">
+        <h3 class="card--3__title">Card 3</h3>
+          <div class="card--3__img"></div>
+          <p class="card--3__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+          <button class="btn card--3__btn">button</button>
       </div>
       <!-- <div class="card--3">card3</div>
       <div class="card--4">card4</div> -->
