Completed card-3 styling

--- a/cards.html
+++ b/cards.html
@@ -36,7 +36,7 @@
       <div class="card card--3">
         <h3 class="card--3__title">Card 3</h3>
           <div class="card--3__img"></div>
-          <p class="card--3__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+          <p class="card--3__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
           <button class="btn card--3__btn">button</button>
       </div>
       <!-- <div class="card--3">card3</div>
