--- a/cards.html
+++ b/cards.html
@@ -39,8 +39,14 @@
           <p class="card--3__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
           <button class="btn card--3__btn">button</button>
       </div>
-      <!-- <div class="card--3">card3</div>
-      <div class="card--4">card4</div> -->
+
+      <div class="card card--4">
+        <h3 class="card--4__title">Card 4</h3>
+          <div class="card--4__img"></div>
+          <p class="card--4__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
+          <button class="btn card--4__btn">button</button>
+      </div>
+
     </div>
   </body>
 </html>
