Edited card 4 paragraph

--- a/cards.html
+++ b/cards.html
@@ -43,7 +43,7 @@
       <div class="card card--4">
         <h3 class="card--4__title">Card 4</h3>
           <div class="card--4__img"></div>
-          <p class="card--4__para">Lorem ipsum dolor, sit amet consectetur adipisicing elit</p>
+          <p class="card--4__para">Lorem ipsum dolor sit amet consectetur.</p>
           <button class="btn card--4__btn">button</button>
       </div>
 
