Added basic menus background

--- a/menus.html
+++ b/menus.html
@@ -7,5 +7,14 @@
     <link rel="stylesheet" href="/css/main.css" />
     <title>Menus</title>
   </head>
-  <body></body>
+  <body>
+    <div class="main">
+      <h1 class="title">
+        <a href="#" class="title__link">Menus</a>
+      </h1>
+      <h3 class="title go-home">
+        <a href="/index.html" class="title__link">&larr; Go Home</a>
+      </h3>
+    </div>
+  </body>
 </html>
