edited forms.html homepage link

--- a/forms.html
+++ b/forms.html
@@ -13,7 +13,7 @@
         <a href="#" class="title__link">Forms</a>
       </h1>
       <h3 class="title go-home">
-        <a href="/forms.html" class="title__link">&larr; Go Home</a>
+        <a href="/index.html" class="title__link">&larr; Go Home</a>
       </h3>
     </div>
   </body>
