Started HTML editing

--- a/forms.html
+++ b/forms.html
@@ -15,6 +15,10 @@
       <h3 class="title go-home">
         <a href="/index.html" class="title__link">&larr; Go Home</a>
       </h3>
+
+      <div class="forms">
+        <div class="form form__1"></div>
+      </div>
     </div>
   </body>
 </html>
