Added avatar image to form--1

--- a/forms.html
+++ b/forms.html
@@ -17,7 +17,13 @@
       </h3>
 
       <div class="forms">
-        <div class="form form__1"></div>
+        <div class="form form__1">
+          <img
+            src="/assets/img/-avatar_89781.png"
+            alt="avatar"
+            class="form__1--img"
+          />
+        </div>
       </div>
     </div>
   </body>
