Edited image alt title in html

--- a/forms.html
+++ b/forms.html
@@ -20,7 +20,7 @@
         <div class="form form__1">
           <img
             src="/assets/img/-avatar_89781.png"
-            alt="avatar"
+            alt="Avatar"
             class="form__1--img"
           />
         </div>
