changed form div to form

--- a/forms.html
+++ b/forms.html
@@ -17,13 +17,13 @@
       </h3>
 
       <div class="forms">
-        <div class="form form__1">
+        <form class="form form__1">
           <img
             src="/assets/img/-avatar_89781.png"
             alt="Avatar"
             class="form__1--img"
           />
-        </div>
+        </form>
       </div>
     </div>
   </body>
