--- a/forms.html
+++ b/forms.html
@@ -23,6 +23,9 @@
             alt="Avatar"
             class="form__1--img"
           />
+
+          <label for="name">Name</label>
+          <input type="text" id="name" />
         </form>
       </div>
     </div>
