--- a/forms.html
+++ b/forms.html
@@ -24,8 +24,8 @@
             class="form__1--img"
           />
 
-          <label for="name">Name</label>
-          <input type="text" id="name" />
+          <label for="name" class="form__1--name">Name</label>
+          <input type="text" id="name" class="form__1--input" />
         </form>
       </div>
     </div>
