--- a/forms.html
+++ b/forms.html
@@ -24,8 +24,10 @@
             class="form__1--img"
           />
 
-          <label for="name" class="form__1--name">Name</label>
-          <input type="text" id="name" class="form__1--input" />
+          <div class="form__1--field">
+            <label for="name" class="form__1--name">Name</label>
+            <input type="text" id="name" class="form__1--input" />
+          </div>
         </form>
       </div>
     </div>
