--- a/forms.html
+++ b/forms.html
@@ -28,6 +28,10 @@
             <label for="name" class="form__1--name">Name</label>
             <input type="text" id="name" class="form__1--input" />
           </div>
+          <div class="form__1--field">
+            <label for="name" class="form__1--email">Email</label>
+            <input type="text" id="name" class="form__1--input" />
+          </div>
         </form>
       </div>
     </div>
