--- a/forms.html
+++ b/forms.html
@@ -24,14 +24,16 @@
             class="form__1--img"
           />
 
-          <div class="form__1--field">
-            <label for="name" class="form__1--name">Name</label>
-            <input type="text" id="name" class="form__1--input" />
-          </div>
-          <div class="form__1--field">
-            <label for="name" class="form__1--email">Email</label>
-            <input type="text" id="name" class="form__1--input" />
-          </div>
+          <section class="fields">
+            <div class="form__1--field">
+              <label for="name" class="form__1--name">Name</label>
+              <input type="text" id="name" class="form__1--input" />
+            </div>
+            <div class="form__1--field">
+              <label for="name" class="form__1--email">Email</label>
+              <input type="text" id="name" class="form__1--input" />
+            </div>
+          </section>
         </form>
       </div>
     </div>
