--- a/forms.html
+++ b/forms.html
@@ -26,11 +26,13 @@
 
           <section class="fields">
             <div class="form__1--field">
-              <label for="name" class="form__1--name">Name</label>
+              <label for="name" class="form__1--name form__1--text">Name</label>
               <input type="text" id="name" class="form__1--input" />
             </div>
             <div class="form__1--field">
-              <label for="name" class="form__1--email">Email</label>
+              <label for="name" class="form__1--email form__1--text"
+                >Email</label
+              >
               <input type="text" id="name" class="form__1--input" />
             </div>
           </section>
