added a submit button to form 1

--- a/forms.html
+++ b/forms.html
@@ -35,6 +35,9 @@
               >
               <input type="text" id="name" class="form__1--input" />
             </div>
+            <button class="form__1--button">
+              Send
+            </button>
           </section>
         </form>
       </div>
