revised form--1 send button to submit button

--- a/forms.html
+++ b/forms.html
@@ -35,9 +35,15 @@
               >
               <input type="text" id="name" class="form__1--input" />
             </div>
-            <button class="form__1--button">
-              Send
-            </button>
+
+            <div>
+              <input
+                type="submit"
+                name="send"
+                id="send"
+                class="form__1--button"
+              />
+            </div>
           </section>
         </form>
       </div>
