added a new input field to form--1

--- a/forms.html
+++ b/forms.html
@@ -35,6 +35,12 @@
               >
               <input type="text" id="name" class="form__1--input" />
             </div>
+            <div class="form__1--field">
+              <label for="name" class="form__1--email form__1--text"
+                >Password</label
+              >
+              <input type="text" id="name" class="form__1--input" />
+            </div>
 
             <div>
               <input
