--- a/forms.html
+++ b/forms.html
@@ -53,6 +53,44 @@
           </section>
         </form>
       </div>
+
+      <div class="forms">
+        <form class="form form__1">
+          <img
+            src="/assets/img/-avatar_89781.png"
+            alt="Avatar"
+            class="form__1--img"
+          />
+
+          <section class="fields">
+            <div class="form__1--field">
+              <label for="name" class="form__1--name form__1--text">Name</label>
+              <input type="text" id="name" class="form__1--input" />
+            </div>
+            <div class="form__1--field">
+              <label for="name" class="form__1--email form__1--text"
+                >Email</label
+              >
+              <input type="text" id="name" class="form__1--input" />
+            </div>
+            <div class="form__1--field">
+              <label for="name" class="form__1--email form__1--text"
+                >Password</label
+              >
+              <input type="text" id="name" class="form__1--input" />
+            </div>
+
+            <div>
+              <input
+                type="submit"
+                name="send"
+                id="send"
+                class="form__1--button"
+              />
+            </div>
+          </section>
+        </form>
+      </div>
     </div>
   </body>
 </html>
