added image avatar to form--2

--- a/forms.html
+++ b/forms.html
@@ -53,12 +53,8 @@
           </section>
         </form>
 
-        <form class="form form__1">
-          <img
-            src="/assets/img/-avatar_89781.png"
-            alt="Avatar"
-            class="form__1--img"
-          />
+        <form class="form form__2">
+          <img src="/assets/img/ghoul.jpg" alt="Avatar" class="form__1--img" />
 
           <section class="fields">
             <div class="form__1--field">
