added third form to HTML

--- a/forms.html
+++ b/forms.html
@@ -84,6 +84,38 @@
             </div>
           </section>
         </form>
+
+        <form class="form form__3">
+          <img src="/assets/img/ghoul.jpg" alt="Avatar" class="form__2--img" />
+
+          <section class="fields">
+            <div class="form__2--field">
+              <label for="name" class="form__2--name form__2--text">Name</label>
+              <input type="text" id="name" class="form__2--input" />
+            </div>
+            <div class="form__2--field">
+              <label for="name" class="form__2--email form__2--text"
+                >Email</label
+              >
+              <input type="text" id="name" class="form__2--input" />
+            </div>
+            <div class="form__2--field">
+              <label for="name" class="form__2--email form__2--text"
+                >Password</label
+              >
+              <input type="text" id="name" class="form__2--input" />
+            </div>
+
+            <div>
+              <input
+                type="submit"
+                name="send"
+                id="send"
+                class="form__2--button"
+              />
+            </div>
+          </section>
+        </form>
       </div>
     </div>
   </body>
