Added additional form

--- a/forms.html
+++ b/forms.html
@@ -116,6 +116,38 @@
             </div>
           </section>
         </form>
+
+        <form class="form form__3">
+          <img src="/assets/img/slayer.jpg" alt="Avatar" class="form__3--img" />
+
+          <section class="fields">
+            <div class="form__3--field">
+              <label for="name" class="form__3--name form__3--text">Name</label>
+              <input type="text" id="name" class="form__3--input" />
+            </div>
+            <div class="form__3--field">
+              <label for="name" class="form__3--email form__3--text"
+                >Email</label
+              >
+              <input type="text" id="name" class="form__3--input" />
+            </div>
+            <div class="form__3--field">
+              <label for="name" class="form__3--email form__3--text"
+                >Password</label
+              >
+              <input type="text" id="name" class="form__3--input" />
+            </div>
+
+            <div>
+              <input
+                type="submit"
+                name="send"
+                id="send"
+                class="form__3--button"
+              />
+            </div>
+          </section>
+        </form>
       </div>
     </div>
   </body>
