--- a/forms.html
+++ b/forms.html
@@ -118,7 +118,7 @@
         </form>
 
         <form class="form form__4">
-          <img src="/assets/img/slayer.jpg" alt="Avatar" class="form__4--img" />
+          <img src="/assets/img/Deku.jpg" alt="Avatar" class="form__4--img" />
 
           <section class="fields">
             <div class="form__4--field">
