Changed form--4 avatar image

--- a/forms.html
+++ b/forms.html
@@ -150,7 +150,11 @@
         </form>
 
         <form class="form form__5">
-          <img src="/assets/img/Deku.jpg" alt="Avatar" class="form__5--img" />
+          <img
+            src="/assets/img/death-note.jpg"
+            alt="Avatar"
+            class="form__5--img"
+          />
 
           <section class="fields">
             <div class="form__5--field">
