Changed form--5 avatar name

--- a/forms.html
+++ b/forms.html
@@ -151,7 +151,7 @@
 
         <form class="form form__5">
           <img
-            src="/assets/img/death-note.jpg"
+            src="/assets/img/death_note.jpg"
             alt="Avatar"
             class="form__5--img"
           />
